Updated the map code to also generate nice description for the map

--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "V_end - V_1@X_1 - V_2@X_2 - V_3@X_3 - V_4@X_4 - V_5@X_5 - V_6@X_6 - V_7@X_7 - V_8@X_8 - V_9@X_9 - V_10@X_10 - V_11@X_11 - V_12@X_12 - V_13@X_13\n",
+      "P_1 - P1_1@X_1 - P1_2@X_2 - P1_3@X_3 - P1_4@X_4 - P1_5@X_5 - P1_6@X_6 - P1_7@X_7 - P1_8@X_8 - P1_9@X_9 - P1_10@X_10 - P1_11@X_11 - P1_12@X_12 - P1_13@X_13\n",
+      "P_2 - P2_1@X_1 - P2_2@X_2 - P2_3@X_3 - P2_4@X_4 - P2_5@X_5 - P2_6@X_6 - P2_7@X_7 - P2_8@X_8 - P2_9@X_9 - P2_10@X_10 - P2_11@X_11 - P2_12@X_12 - P2_13@X_13\n",
+      "P_3 - P3_1@X_1 - P3_2@X_2 - P3_3@X_3 - P3_4@X_4 - P3_5@X_5 - P3_6@X_6 - P3_7@X_7 - P3_8@X_8 - P3_9@X_9 - P3_10@X_10 - P3_11@X_11 - P3_12@X_12 - P3_13@X_13\n",
+      "V_end + 0.7737809374999998 * P_1 + 0.5987369392383787 * P_2 + 0.46329123015975304 * P_3\n",
+      "W_1@X_1 + W_2@X_2 + W_3@X_3 + W_4@X_4 + W_5@X_5 + W_6@X_6 + W_7@X_7 + W_8@X_8 + W_9@X_9 + W_10@X_10 + W_11@X_11 + W_12@X_12 + W_13@X_13\n",
+      "0.7737809374999998 * P_1 + 0.5987369392383787 * P_2 + 0.46329123015975304 * P_3\n",
       "Set parameter Username\n",
       "Academic license - for non-commercial use only - expires 2025-02-22\n",
       "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
@@ -48,41 +55,147 @@
       "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
       "\n",
-      "Optimize a model with 16 rows, 170 columns and 294 nonzeros\n",
-      "Model fingerprint: 0xd3cfee5b\n",
-      "Variable types: 1 continuous, 169 integer (169 binary)\n",
+      "Optimize a model with 17 rows, 173 columns and 256 nonzeros\n",
+      "Model fingerprint: 0xc597e2f3\n",
+      "Variable types: 4 continuous, 169 integer (169 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e-05, 1e+00]\n",
-      "  Objective range  [2e-08, 1e+00]\n",
+      "  Matrix range     [1e+00, 1e+04]\n",
+      "  Objective range  [5e-01, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 3e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
       "\n",
       "User MIP start did not produce a new incumbent solution\n",
       "User MIP start violates constraint x_con_1 by 1.000000000\n",
       "\n",
-      "Found heuristic solution: objective 2.7449022\n",
-      "Presolve removed 8 rows and 139 columns\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 8 rows, 31 columns, 110 nonzeros\n",
-      "Found heuristic solution: objective 0.9999961\n",
-      "Variable types: 1 continuous, 30 integer (30 binary)\n",
+      "Found heuristic solution: objective -1921.841740\n",
+      "Presolve removed 17 rows and 173 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolve: All rows and columns removed\n",
       "\n",
-      "Root relaxation: objective 4.915216e-01, 17 iterations, 0.01 seconds (0.00 work units)\n",
-      "Another try with MIP start\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.05 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 12 available processors)\n",
+      "\n",
+      "Solution count 2: -48167.6 -1921.84 \n",
+      "No other solutions better than -48167.6\n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective -4.816758222552e+04, best bound -4.816758222552e+04, gap 0.0000%\n",
+      "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
+      "\n",
+      "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
+      "\n",
+      "Optimize a model with 17 rows, 173 columns and 256 nonzeros\n",
+      "Model fingerprint: 0x31a9904b\n",
+      "Variable types: 4 continuous, 169 integer (169 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+04]\n",
+      "  Objective range  [2e-02, 6e+02]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "\n",
+      "User MIP start did not produce a new incumbent solution\n",
+      "User MIP start violates constraint x_con_1 by 1.000000000\n",
+      "MIP start from previous solve produced solution with objective -1614.29 (0.01s)\n",
+      "Loaded MIP start from previous solve with objective -1614.29\n",
+      "\n",
+      "Presolve removed 17 rows and 173 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 12 available processors)\n",
+      "\n",
+      "Solution count 2: -2302.17 -1614.29 \n",
+      "No other solutions better than -2302.17\n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective -2.302166619056e+03, best bound -2.302166619056e+03, gap 0.0000%\n",
+      "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
+      "\n",
+      "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
+      "\n",
+      "Optimize a model with 17 rows, 173 columns and 256 nonzeros\n",
+      "Model fingerprint: 0xcee36e20\n",
+      "Variable types: 4 continuous, 169 integer (169 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+04]\n",
+      "  Objective range  [5e-01, 8e-01]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 1e+00]\n",
+      "\n",
+      "User MIP start did not produce a new incumbent solution\n",
+      "User MIP start violates constraint x_con_1 by 1.000000000\n",
+      "MIP start from previous solve produced solution with objective 0 (0.01s)\n",
+      "Loaded MIP start from previous solve with objective 0\n",
+      "\n",
+      "Presolve removed 17 rows and 173 columns\n",
+      "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
+      "\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Thread count was 1 (of 12 available processors)\n",
+      "\n",
+      "Solution count 2: -18255.6 0 \n",
+      "No other solutions better than -18255.6\n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective -1.825561452050e+04, best bound -1.825561452050e+04, gap 0.0000%\n",
+      "{'f_1': 48167.582225522194, 'f_2': 2302.1666190556907, 'f_3': 18255.61452049992}\n",
+      "{'f_1': 37529.29570599173, 'f_2': 852.0870110798501, 'f_3': 0.0}\n",
+      "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
+      "\n",
+      "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 10 physical cores, 12 logical processors, using up to 12 threads\n",
+      "\n",
+      "Optimize a model with 20 rows, 174 columns and 311 nonzeros\n",
+      "Model fingerprint: 0x3571a0f1\n",
+      "Variable types: 5 continuous, 169 integer (169 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [2e-05, 1e+04]\n",
+      "  Objective range  [2e-11, 1e+00]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 5e+00]\n",
+      "\n",
+      "User MIP start did not produce a new incumbent solution\n",
+      "User MIP start violates constraint x_con_1 by 1.000000000\n",
+      "\n",
+      "Found heuristic solution: objective 4.3468518\n",
+      "Presolve removed 9 rows and 125 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolved: 11 rows, 49 columns, 173 nonzeros\n",
+      "Variable types: 4 continuous, 45 integer (45 binary)\n",
+      "\n",
+      "Root relaxation: objective 3.261067e-01, 19 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "H    0     0                       0.4920936    0.49152  0.12%     -    0s\n",
-      "     0     0    0.49152    0    2    0.49209    0.49152  0.12%     -    0s\n",
+      "     0     0    0.32611    0    2    4.34685    0.32611  92.5%     -    0s\n",
+      "H    0     0                       0.3829329    0.32611  14.8%     -    0s\n",
+      "H    0     0                       0.3648764    0.32611  10.6%     -    0s\n",
+      "H    0     0                       0.3451865    0.32896  4.70%     -    0s\n",
+      "     0     0    0.33655    0    4    0.34519    0.33655  2.50%     -    0s\n",
+      "     0     0    0.33866    0    2    0.34519    0.33866  1.89%     -    0s\n",
+      "H    0     0                       0.3445361    0.33866  1.71%     -    0s\n",
+      "     0     0    0.33866    0    6    0.34454    0.33866  1.71%     -    0s\n",
+      "H    0     0                       0.3425275    0.33907  1.01%     -    0s\n",
+      "     0     0    0.33990    0    7    0.34253    0.33990  0.77%     -    0s\n",
       "\n",
-      "Explored 1 nodes (17 simplex iterations) in 0.07 seconds (0.00 work units)\n",
+      "Cutting planes:\n",
+      "  Gomory: 2\n",
+      "  MIR: 3\n",
+      "  StrongCG: 1\n",
+      "  Inf proof: 2\n",
+      "\n",
+      "Explored 1 nodes (36 simplex iterations) in 0.07 seconds (0.00 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 3: 0.492094 0.999996 2.7449 \n",
+      "Solution count 6: 0.342527 0.344536 0.345186 ... 4.34685\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 4.920935553032e-01, best bound 4.920935553032e-01, gap 0.0000%\n"
+      "Best objective 3.425274525416e-01, best bound 3.425274525416e-01, gap 0.0000%\n"
      ]
     }
    ],
@@ -93,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,10 +224,14 @@
        " TensorVariable(name='X_10', symbol='X_10', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
        " TensorVariable(name='X_11', symbol='X_11', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
        " TensorVariable(name='X_12', symbol='X_12', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       " TensorVariable(name='X_13', symbol='X_13', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])]"
+       " TensorVariable(name='X_13', symbol='X_13', variable_type=<VariableTypeEnum.binary: 'binary'>, shape=[13], lowerbounds=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], upperbounds=['List', 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], initial_values=['List', 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " Variable(name='P_1', symbol='P_1', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None),\n",
+       " Variable(name='P_2', symbol='P_2', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None),\n",
+       " Variable(name='P_3', symbol='P_3', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None),\n",
+       " Variable(name='V_end', symbol='V_end', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SolverResults(optimal_variables={'X_1': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_2': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_3': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_4': [-0.0, -0.0, -0.0, -0.0, 1.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0, -0.0], 'X_5': [1.0, -0.0, -0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_6': [-0.0, -0.0, 1.0, -0.0, -0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0, -0.0, 0.0], 'X_7': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_8': [-0.0, -0.0, 1.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_9': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_10': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_11': [1.0, -0.0, -0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_12': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_13': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], '_alpha': 0.49209727681124427}, optimal_objectives={'f_1': 37832.80781517742, 'f_2': 1931.5977018158155, 'f_3': 18680.98264500715}, constraint_values={'x_con_1': -0.0, 'x_con_2': -0.0, 'x_con_3': -0.0, 'x_con_4': -0.0, 'x_con_5': -0.0, 'x_con_6': -0.0, 'x_con_7': -0.0, 'x_con_8': -0.0, 'x_con_9': -0.0, 'x_con_10': -0.0, 'x_con_11': -0.0, 'x_con_12': -0.0, 'x_con_13': -0.0, 'f_1_con': -0.001141524068145383, 'f_2_con': -0.3311318481419864, 'f_3_con': 4.141131881851834e-14}, success=True, message=\"Gurobipy solver status is: 'Optimal solution found.'\")"
+       "SolverResults(optimal_variables={'X_1': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_2': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_3': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_4': [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_5': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_6': [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0], 'X_7': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_8': [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_9': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_10': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_11': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_12': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_13': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'P_1': 0.0, 'P_2': 11550.6197518798, 'P_3': 10979.96240220874, 'V_end': 35215.757006547276, '_alpha': 0.3425337968165792}, optimal_objectives={'f_1': 47218.46001152127, 'f_2': 1811.6699537845882, 'f_3': 12002.703004973995}, constraint_values={'x_con_1': -0.0, 'x_con_2': -0.0, 'x_con_3': -0.0, 'x_con_4': -0.0, 'x_con_5': -0.0, 'x_con_6': -0.0, 'x_con_7': -0.0, 'x_con_8': -0.0, 'x_con_9': -0.0, 'x_con_10': -0.0, 'x_con_11': -0.0, 'x_con_12': -0.0, 'x_con_13': -0.0, 'v_con': -1.4551915228366852e-11, 'p1_con': -0.0, 'p2_con': -0.0, 'p3_con': -0.0, 'f_1_con': -0.25328292846527933, 'f_2_con': -0.003919016749868609, 'f_3_con': 1.1102230246251565e-16}, success=True, message=\"Gurobipy solver status is: 'Optimal solution found.'\")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,11 +276,11 @@
       "42.0\n",
       "donothing\n",
       "44.0\n",
-      "clearcut_2035\n",
+      "even_2035\n",
       "27.0\n",
       "donothing\n",
       "28.0\n",
-      "above_2035\n",
+      "clearcut_2030\n",
       "29.0\n",
       "donothing\n",
       "14.0\n",
@@ -183,7 +300,7 @@
    ],
    "source": [
     "for key in start_result.optimal_variables:\n",
-    "    if key.startswith(\"_\"):\n",
+    "    if not key.startswith(\"X\"):\n",
     "        continue\n",
     "    print(schedule_dict[key][\"unit\"])\n",
     "    print(schedule_dict[key][start_result.optimal_variables[key].index(1)])"
@@ -191,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
