--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\devel\\anaconda3\\envs\\desdeo2\\Lib\\site-packages\\pydantic\\_internal\\_config.py:334: UserWarning: Valid config keys have changed in V2:\n",
-      "* 'allow_population_by_field_name' has been renamed to 'populate_by_name'\n",
-      "  warnings.warn(message, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from desdeo.utopia_stuff.utopia_problem import utopia_problem\n",
@@ -34,22 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_end - V_1@X_1 - V_2@X_2 - V_3@X_3 - V_4@X_4 - V_5@X_5 - V_6@X_6 - V_7@X_7 - V_8@X_8 - V_9@X_9 - V_10@X_10 - V_11@X_11 - V_12@X_12 - V_13@X_13\n",
-      "P_1 - P1_1@X_1 - P1_2@X_2 - P1_3@X_3 - P1_4@X_4 - P1_5@X_5 - P1_6@X_6 - P1_7@X_7 - P1_8@X_8 - P1_9@X_9 - P1_10@X_10 - P1_11@X_11 - P1_12@X_12 - P1_13@X_13\n",
-      "P_2 - P2_1@X_1 - P2_2@X_2 - P2_3@X_3 - P2_4@X_4 - P2_5@X_5 - P2_6@X_6 - P2_7@X_7 - P2_8@X_8 - P2_9@X_9 - P2_10@X_10 - P2_11@X_11 - P2_12@X_12 - P2_13@X_13\n",
-      "P_3 - P3_1@X_1 - P3_2@X_2 - P3_3@X_3 - P3_4@X_4 - P3_5@X_5 - P3_6@X_6 - P3_7@X_7 - P3_8@X_8 - P3_9@X_9 - P3_10@X_10 - P3_11@X_11 - P3_12@X_12 - P3_13@X_13\n",
-      "V_end + 0.7737809374999998 * P_1 + 0.5987369392383787 * P_2 + 0.46329123015975304 * P_3\n",
-      "W_1@X_1 + W_2@X_2 + W_3@X_3 + W_4@X_4 + W_5@X_5 + W_6@X_6 + W_7@X_7 + W_8@X_8 + W_9@X_9 + W_10@X_10 + W_11@X_11 + W_12@X_12 + W_13@X_13\n",
-      "0.7737809374999998 * P_1 + 0.5987369392383787 * P_2 + 0.46329123015975304 * P_3\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2025-02-22\n",
       "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
       "\n",
       "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
@@ -69,10 +50,10 @@
       "\n",
       "Found heuristic solution: objective -1921.841740\n",
       "Presolve removed 17 rows and 173 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.05 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 1 (of 12 available processors)\n",
       "\n",
       "Solution count 2: -48167.6 -1921.84 \n",
@@ -134,7 +115,7 @@
       "Presolve time: 0.00s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 1 (of 12 available processors)\n",
       "\n",
       "Solution count 2: -18255.6 0 \n",
@@ -163,7 +144,7 @@
       "\n",
       "Found heuristic solution: objective 4.3468518\n",
       "Presolve removed 9 rows and 125 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.00s\n",
       "Presolved: 11 rows, 49 columns, 173 nonzeros\n",
       "Variable types: 4 continuous, 45 integer (45 binary)\n",
       "\n",
@@ -189,7 +170,7 @@
       "  StrongCG: 1\n",
       "  Inf proof: 2\n",
       "\n",
-      "Explored 1 nodes (36 simplex iterations) in 0.07 seconds (0.00 work units)\n",
+      "Explored 1 nodes (36 simplex iterations) in 0.06 seconds (0.00 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
       "Solution count 6: 0.342527 0.344536 0.345186 ... 4.34685\n",
@@ -206,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +212,7 @@
        " Variable(name='V_end', symbol='V_end', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +232,7 @@
        "SolverResults(optimal_variables={'X_1': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_2': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_3': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_4': [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_5': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_6': [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0], 'X_7': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_8': [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_9': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_10': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_11': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_12': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_13': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'P_1': 0.0, 'P_2': 11550.6197518798, 'P_3': 10979.96240220874, 'V_end': 35215.757006547276, '_alpha': 0.3425337968165792}, optimal_objectives={'f_1': 47218.46001152127, 'f_2': 1811.6699537845882, 'f_3': 12002.703004973995}, constraint_values={'x_con_1': -0.0, 'x_con_2': -0.0, 'x_con_3': -0.0, 'x_con_4': -0.0, 'x_con_5': -0.0, 'x_con_6': -0.0, 'x_con_7': -0.0, 'x_con_8': -0.0, 'x_con_9': -0.0, 'x_con_10': -0.0, 'x_con_11': -0.0, 'x_con_12': -0.0, 'x_con_13': -0.0, 'v_con': -1.4551915228366852e-11, 'p1_con': -0.0, 'p2_con': -0.0, 'p3_con': -0.0, 'f_1_con': -0.25328292846527933, 'f_2_con': -0.003919016749868609, 'f_3_con': 1.1102230246251565e-16}, success=True, message=\"Gurobipy solver status is: 'Optimal solution found.'\")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clearcut_2035\n",
-      "above_2035\n",
+      "even_2035\n",
+      "clearcut_2030\n",
       "above_2035\n"
      ]
     }
@@ -346,7 +327,7 @@
     "\n",
     "treatments_dict={}\n",
     "for key in start_result.optimal_variables:\n",
-    "    if key.startswith(\"_\"):\n",
+    "    if not key.startswith(\"X\"):\n",
     "        continue\n",
     "    treatments = schedule_dict[key][start_result.optimal_variables[key].index(1)]\n",
     "    treatments_dict[key] = {\"2025\":0, \"2030\":0, \"2035\":0}\n",
@@ -362,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,9 +352,9 @@
        "{'X_1': {'2025': 0, '2030': 0, '2035': 0},\n",
        " 'X_2': {'2025': 0, '2030': 0, '2035': 0},\n",
        " 'X_3': {'2025': 0, '2030': 0, '2035': 0},\n",
-       " 'X_4': {'2025': 0, '2030': 0, '2035': 1},\n",
+       " 'X_4': {'2025': 0, '2030': 0, '2035': 4},\n",
        " 'X_5': {'2025': 0, '2030': 0, '2035': 0},\n",
-       " 'X_6': {'2025': 0, '2030': 0, '2035': 3},\n",
+       " 'X_6': {'2025': 0, '2030': 1, '2035': 0},\n",
        " 'X_7': {'2025': 0, '2030': 0, '2035': 0},\n",
        " 'X_8': {'2025': 0, '2030': 0, '2035': 3},\n",
        " 'X_9': {'2025': 0, '2030': 0, '2035': 0},\n",
@@ -383,7 +364,7 @@
        " 'X_13': {'2025': 0, '2030': 0, '2035': 0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,9 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'P_1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 174\u001b[0m\n\u001b[0;32m    172\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m key\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    173\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m--> 174\u001b[0m stand \u001b[38;5;241m=\u001b[39m \u001b[43mschedule_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m    175\u001b[0m treatment_id \u001b[38;5;241m=\u001b[39m treatments_dict[key][selectedYear]\n\u001b[0;32m    176\u001b[0m option[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvisualMap\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpieces\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\n\u001b[0;32m    177\u001b[0m     {\n\u001b[0;32m    178\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m: treatment_id,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    182\u001b[0m     }\n\u001b[0;32m    183\u001b[0m )\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'P_1'"
+     ]
+    }
+   ],
    "source": [
     "option = {\n",
     "    # // This can be used to show any picture behind the map, including an aerial image\n",
@@ -569,7 +562,7 @@
     "selectedYear = \"2035\"\n",
     "\n",
     "for key in start_result.optimal_variables:\n",
-    "    if key.startswith(\"_\"):\n",
+    "    if not key.startswith(\"X\"):\n",
     "        continue\n",
     "    stand = schedule_dict[key][\"unit\"]\n",
     "    treatment_id = treatments_dict[key][selectedYear]\n",
@@ -624,67 +617,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'X_1': {'0': 'donothing', 'unit': 25.0},\n",
-       " 'X_2': {'0': 'donothing', 'unit': 26.0},\n",
-       " 'X_3': {'0': 'donothing', 'unit': 42.0},\n",
-       " 'X_4': {'0': 'donothing',\n",
-       "  '1': 'below_2035',\n",
-       "  '2': 'above_2035',\n",
-       "  '3': 'even_2035',\n",
-       "  '4': 'clearcut_2035',\n",
-       "  '5': 'below_2030',\n",
-       "  '6': 'below_2030 + clearcut_2035',\n",
-       "  '7': 'above_2030',\n",
-       "  '8': 'above_2030 + clearcut_2035',\n",
-       "  '9': 'even_2030',\n",
-       "  '10': 'even_2030 + clearcut_2035',\n",
-       "  '11': 'clearcut_2030',\n",
-       "  '12': 'clearcut_2025',\n",
-       "  'unit': 44.0},\n",
-       " 'X_5': {'0': 'donothing',\n",
-       "  '1': 'below_2035',\n",
-       "  '2': 'above_2035',\n",
-       "  '3': 'even_2035',\n",
-       "  'unit': 27.0},\n",
-       " 'X_6': {'0': 'donothing',\n",
-       "  '1': 'below_2035',\n",
-       "  '2': 'above_2035',\n",
-       "  '3': 'even_2035',\n",
-       "  '4': 'clearcut_2035',\n",
-       "  '5': 'below_2030',\n",
-       "  '6': 'below_2030 + clearcut_2035',\n",
-       "  '7': 'above_2030',\n",
-       "  '8': 'above_2030 + clearcut_2035',\n",
-       "  '9': 'even_2030',\n",
-       "  '10': 'even_2030 + clearcut_2035',\n",
-       "  '11': 'clearcut_2030',\n",
-       "  'unit': 28.0},\n",
-       " 'X_7': {'0': 'donothing', 'unit': 29.0},\n",
-       " 'X_8': {'0': 'donothing',\n",
-       "  '1': 'below_2035',\n",
-       "  '2': 'above_2035',\n",
-       "  '3': 'even_2035',\n",
-       "  'unit': 14.0},\n",
-       " 'X_9': {'0': 'donothing', 'unit': 11.0},\n",
-       " 'X_10': {'0': 'donothing', 'unit': 13.0},\n",
-       " 'X_11': {'0': 'donothing',\n",
-       "  '1': 'below_2035',\n",
-       "  '2': 'above_2035',\n",
-       "  '3': 'even_2035',\n",
-       "  'unit': 12.0},\n",
-       " 'X_12': {'0': 'donothing', 'unit': 15.0},\n",
-       " 'X_13': {'0': 'donothing', 'unit': 16.0}}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'start_result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m decision_variables \u001b[38;5;241m=\u001b[39m \u001b[43mstart_result\u001b[49m\u001b[38;5;241m.\u001b[39moptimal_variables\n\u001b[0;32m      2\u001b[0m map_description \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista ensimmäisellä ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_1\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista toisella ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_2\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista kolmannella ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_3\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMetsän diskontattu arvo suunnittelujakson lopussa on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mV_end\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m     )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'start_result' is not defined"
+     ]
     }
    ],
    "source": [
-    "foo"
+    "decision_variables = start_result.optimal_variables\n",
+    "map_description = (\n",
+    "        f\"Tuotto hakkuista ensimmäisellä ajanjaksolla on {int(decision_variables[\"P_1\"])}€. \"\n",
+    "        + f\"Tuotto hakkuista toisella ajanjaksolla on {int(decision_variables[\"P_2\"])}€. \"\n",
+    "        + f\"Tuotto hakkuista kolmannella ajanjaksolla on {int(decision_variables[\"P_3\"])}€. \"\n",
+    "        + f\"Metsän diskontattu arvo suunnittelujakson lopussa on {int(decision_variables[\"V_end\"])}€.\"\n",
+    "    )"
    ]
   },
   {
